--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -111,6 +111,7 @@ jobs:
           echo "sdk.dir=${ANDROID_HOME}" > local.properties
           ./run init action gradle
           ./gradlew clean app:assembleFossDebug
+          # ./gradlew clean app:assembleFossRelease
           APK=$(find app/build/outputs/apk -name '*arm64-v8a*.apk')
           APK=$(dirname $APK)
           rm $APK/output-metadata.json
