--- a/.github/ISSUE_TEMPLATE/bug_report_zh.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_zh.yml
@@ -1,5 +1,5 @@
 name: 错误反馈
-description: "提交 虎兕 漏洞"
+description: "提交 HUSI 漏洞"
 body:
   - type: textarea
     attributes:
@@ -29,7 +29,7 @@ body:
     attributes:
       label: 完整性要求
       description: |-
-        请勾选以下所有选项以证明您已经阅读并理解了以下要求，否则该 issue 将被关闭。
+        请勾选以下所有选项以证明您已经阅I读并理解了以下要求，否则该 issue 将被关闭。
         虎兕 不是讨好无法作出任何意义上的贡献的最终用户并获取非道德影响力的项目，也不是为 “机场” 黑产服务的客户端，更不是广告引流工具。如果您在此处欺骗以故意浪费开发者的时间，您将被永久封锁。
       options:
         - label: 我确定我的问题是 虎兕 本身的问题而不是我自身网络环境或服务器的问题。
