--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -106,6 +106,7 @@ jobs:
         run: |
           echo "sdk.dir=${ANDROID_HOME}" > local.properties
           echo "${{ secrets.LOCAL_PROPERTIES }}" >> local.properties
+          KEYSTORE_PASS="${{ secrets.KEYSTORE_PASS }}" ALIAS_NAME="${{ secrets.ALIAS_NAME }}" ALIAS_PASS="${{ secrets.ALIAS_PASS}}"
           ./run init action gradle
           ./gradlew clean app:assembleFossDebug
           APK=$(find app/build/outputs/apk -name '*arm64-v8a*.apk')
