--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,6 +138,14 @@ jobs:
         with:
           name: r8-mapping
           path: mapping/
+      - name: Set Release Tag
+        run: |
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+            echo "RELEASE_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
+          else
+            VERSION_NAME=$(grep '^VERSION_NAME=' husi.properties | cut -d'=' -f2 | tr -d '\r')
+            echo "RELEASE_TAG=${VERSION_NAME}" >> $GITHUB_ENV
+          fi
       - name: Release
         env:
           GH_TOKEN: ${{ github.token }}
@@ -145,5 +153,6 @@ jobs:
           mkdir apks
           find artifacts -name "*.apk" -exec cp {} apks \;
           cp mapping/mapping.txt apks/mapping.txt
-          gh release create "${{ github.ref_name }}" --title "${{ github.ref_name }}" --prerelease ./apks/* \
-            --notes $'# :memo: Release Notes\n\n* Fixes and improvements.'
+          gh release create "${{ env.RELEASE_TAG }}" --title "${{ env.RELEASE_TAG }}" --prerelease \
+            --notes $'# :memo: Release Notes\n\n* Fixes and improvements.' || echo "Release already exists"
+          gh release upload "${{ env.RELEASE_TAG }}" ./apks/* --clobber
